ossm/gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "20"
  name: istio-eastwestgateway
  namespace: istio-system
spec:
  ports:
    - name: status-port
      port: 15021
      protocol: TCP
      targetPort: 15021
    - name: tls
      port: 15443
      protocol: TCP
      targetPort: 15443
    - name: tls-istiod
      port: 15012
      protocol: TCP
      targetPort: 15012
    - name: tls-webhook
      port: 15017
      protocol: TCP
      targetPort: 15017
  selector:
    istio: eastwestgateway
    topology.istio.io/network: corporate
  type: LoadBalancer
