ossm/gateway/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "20"
  name: istio-eastwestgateway
spec:
  selector:
    app: istio-eastwestgateway
    istio: eastwestgateway
    topology.istio.io/network: corporate
  servers:
  - port:
      number: 15443
      name: tls
      protocol: TLS
    hosts:
    - "*.local"
    tls:
      mode: AUTO_PASSTHROUGH
